Fix overlapping z-index by replacing modal with info window . Fix a few styling elements in stay preview

--- a/src/assets/styles/cmps/stay/StayPreview.css
+++ b/src/assets/styles/cmps/stay/StayPreview.css
@@ -66,8 +66,9 @@
 
 .preview-carousel-btn {
     position: absolute;
-    top: 6rem;
-
+    top: 50%;
+    bottom: 50%;
+    transform: translate(-50% -50%);
     width: 1.8rem;
     height: 1.8rem;
     background-color: #ffffffd1;
