--- a/src/assets/styles/pages/Explore.css
+++ b/src/assets/styles/pages/Explore.css
@@ -161,15 +161,23 @@
 
 .stay-preview.big .stay-header {
     display: flex;
+    width: 100%;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
+    overflow: hidden;
+
+    .stay-name {
+        white-space: nowrap !important;
+        overflow: hidden !important;
+        text-overflow: ellipsis !important;
+    }
 }
 
 .stay-preview.big .stay-rating {
     display: flex;
     align-items: center;
     color: var(--gray3);
-    gap: 0.2rem;
+    gap: 0.1rem;
 }
 
 .stay-preview.big .stay-summary {
@@ -226,17 +234,16 @@
 
 .marker-wrapper.hovered {
     transform: scale(1.1);
-    z-index: 500;
 }
+
 .marker-wrapper.active {
     transform: scale(1.1);
-    z-index: 999;
 }
 
 .marker-wrapper.hovered-outside {
+    transition: all 0.3s ease;
+
     transform: scale(1.11);
-    z-index: 500;
-    transition: all 0.2s ease;
 
     .marker.btn-pill {
         background-color: var(--gray3);
@@ -244,106 +251,130 @@
     }
 }
 
-.modal-popup {
+/* infoWindow styling modal*/
 
-    &.map-stay-preview.open {
-        position: absolute;
-        top: -180px;
-        height: 280px;
-        width: fit-content;
-        max-width: 280px;
-        border-radius: 20px;
+.gm-style .gm-style-iw-c {
+    position: absolute;
+    top: -25px;
+    border-radius: 25px;
 
-        .close-btn.right {
-            background-color: var(--gray1);
-            transition: scale .1s ease;
-            right: .5rem;
+    padding: 0;
+    box-shadow: 0 2px 7px 1px rgba(159, 159, 159, 0.15);
+    max-height: 300px !important;
+
+    /* header */
+    .gm-style-iw-chr {
+        position: relative;
+        padding: 0;
+        height: 0;
+
+        >button {
+            position: absolute;
+            display: block;
+            opacity: 1;
+            z-index: 5;
             top: .5rem;
-            box-shadow: -1px 3px 8px 1px #2222225c;
+            right: .6rem;
+            background-color: rgba(236, 236, 236, 0.78) !important;
+            border-radius: 50px;
+            box-shadow: -1px 3px 8px 1px #4545455c;
+            display: flex;
+            justify-items: center;
+            margin: 0px;
+            width: 2rem !important;
+            height: 2rem !important;
+            transition: scale .1s ease !important;
+
+            span {
+                margin: 0 !important;
+                width: 1.3rem !important;
+                height: 1.3rem !important;
+            }
 
             &:hover {
-                background-color: var(--gray8);
-                scale: 1.05;
+                background-color: white !important;
+                scale: 1.08;
             }
         }
+    }
 
-        header {
-            min-height: 0px;
-            padding: 0rem;
-        }
+    /* main */
+    .gm-style-iw-d {
+        overflow: hidden !important;
 
-        .main-modal {
-            padding: 0;
-            overflow-y: hidden;
-            overflow-x: hidden;
+        .stay-preview.big {
+            aspect-ratio: 14/13;
 
-            .stay-preview.big {
-                .stay-image-wrapper {
+            .stay-image-wrapper {
 
-                    .single-img-carousel,
-                    .carousel-window,
-                    .carousel-track,
-                    .carousel-slide,
-                    .carousel-slide img {
-                        width: 100%;
-                        height: 100%;
-                        border-radius: 0 0 0 0;
-                    }
-
-                    .heart-btn {
-                        position: absolute;
-                        top: .5rem;
-                        right: 3.5rem;
-                        background-color: #ffffffe1;
-                        box-shadow: -1px 3px 8px 1px #2222225c;
-                        border-radius: 50px;
-                        transition: transform 0.2s ease;
-
-                        &:hover {
-                            background-color: var(--white);
-                            scale: 1.0;
-                            transform: scale(1.05);
-                        }
-
-                        .heart-icon svg {
-                            display: block;
-                            fill: none;
-                            height: 1.2rem;
-                            width: 1.2rem;
-                            stroke: var(--gray3);
-                        }
-                    }
-
-                    .preview-carousel-btn {
-                        /* position: absolute; */
-                        /* top: 7rem; */
-                    }
-
+                .single-img-carousel,
+                .carousel-window,
+                .carousel-track,
+                .carousel-slide,
+                .carousel-slide img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 0 0 0 0;
                 }
+
+                .heart-btn {
+                    position: absolute;
+                    top: .5rem;
+                    right: 3.5rem;
+                    background-color: #ffffffe1;
+                    box-shadow: -1px 3px 8px 1px #2222225c;
+                    border-radius: 50px;
+                    transition: transform 0.2s ease;
+
+                    &:hover {
+                        background-color: var(--white);
+                        scale: 1.0;
+                        transform: scale(1.05);
+                    }
+
+                    .heart-icon svg {
+                        display: block;
+                        fill: none;
+                        height: 1.2rem;
+                        width: 1.2rem;
+                        stroke: var(--gray3);
+                    }
+                }
+            }
+
+            .stay-info:not(:first-child) {
+                flex-direction: row-reverse;
+                flex-wrap: wrap;
+                justify-content: start;
+                gap: .3rem;
+                column-gap: .6rem;
+                padding-inline: .8rem;
+                padding-bottom: 1em;
 
                 .stay-header {
-                    font-size: 1rem;
-                    width: 100%;
-                    align-items: start;
+                    font-size: 1.2em;
+                    font-family: cereal-regular;
                 }
 
-                .stay-info:not(:first-child) {
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    padding-inline: .8rem;
-                    padding-bottom: 0.5rem;
+                p.stay-summary {
+                    overflow: hidden;
+                    text-overflow: ellipsis !important;
+                }
 
-                    .stay-price {
-                        text-decoration: none;
-                    }
+                p.stay-card-details,
+                p.explore-cancellation-policy {
+                    display: none;
+                }
+
+                .stay-price {
+                    text-decoration: none;
+                    padding-right: 2px;
                 }
             }
         }
     }
 }
 
-/* .stay-preview.big:hover .marker.btn-pill {
-    background-color: var(--gray3);
-    
-    
-    } */
+.gm-style .gm-style-iw-tc::after {
+    visibility: hidden !important;
+}
